--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
     "manifest_version": 1,
     "action": {
         "title": "Planeshift",
-        "icon": "/icon.svg",
+        "icon": "./icon.svg",
         "popover": "/",
         "height": 600,
         "width": 400
