fix logo path - Update manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
     "author": "OriginalCopy",
     "action": {
         "title": "Mystic Mirror",
-        "icon": "./crystal-ball.png",
+        "icon": "/crystal-ball.png",
         "popover": "/",
         "height": 600,
         "width": 400
